--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -6,6 +6,6 @@
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "outDir": "../../dist",
-    "baseUrl": "./src"
+    "baseUrl": "./modules"
   }
 }
