--- a/package.json
+++ b/package.json
@@ -29,19 +29,25 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@nestjs/cli": "^5.3.0",
     "@nestjs/common": "^5.0.0-beta.6",
     "@nestjs/core": "^5.0.0-beta.6",
     "@nestjs/microservices": "^5.0.0-beta.6",
     "@nestjs/testing": "^5.0.0",
     "@nestjs/websockets": "^5.0.0-beta.6",
+    "@ngxs/devtools-plugin": "^3.2.0",
+    "@ngxs/logger-plugin": "^3.1.4-dev.master-b50211a",
+    "@ngxs/store": "^3.2.0",
     "core-js": "^2.5.4",
     "fastify": "^1.4.0",
     "fastify-formbody": "^2.0.0",
     "fastify-static": "^0.11.0",
     "handlebars": "^4.0.11",
+    "mysql": "^2.16.0",
     "point-of-view": "^1.1.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
+    "typeorm": "^0.2.7",
     "typescript": "2.7.2",
     "zone.js": "^0.8.26"
   },
