--- a/package.json
+++ b/package.json
@@ -34,16 +34,21 @@
     "@nestjs/core": "^5.0.0-beta.6",
     "@nestjs/microservices": "^5.0.0-beta.6",
     "@nestjs/testing": "^5.0.0",
+    "@nestjs/typeorm": "^5.1.0",
     "@nestjs/websockets": "^5.0.0-beta.6",
     "@ngxs/devtools-plugin": "^3.2.0",
     "@ngxs/logger-plugin": "^3.1.4-dev.master-b50211a",
     "@ngxs/store": "^3.2.0",
+    "class-transformer": "^0.1.9",
+    "class-validator": "^0.9.1",
     "core-js": "^2.5.4",
+    "crypto": "^1.0.1",
     "fastify": "^1.4.0",
     "fastify-formbody": "^2.0.0",
     "fastify-static": "^0.11.0",
     "handlebars": "^4.0.11",
     "mysql": "^2.16.0",
+    "nest-router": "^1.0.6",
     "point-of-view": "^1.1.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
