--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client:lint": "ng lint",
     "format": "prettier --write \"**/*.ts\"",
     "server:start": "ts-node -r tsconfig-paths/register src/server/main.ts",
-    "server:watch": "nodemon",
+    "server:watch": "set NODE_ENV=dev&& nodemon",
     "prestart:prod": "rm -rf dist && tsc -p src/server",
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
@@ -43,12 +43,14 @@
     "class-validator": "^0.9.1",
     "core-js": "^2.5.4",
     "crypto": "^1.0.1",
+    "dotenv": "^6.0.0",
     "fastify": "^1.4.0",
     "fastify-formbody": "^2.0.0",
     "fastify-static": "^0.11.0",
     "handlebars": "^4.0.11",
     "mysql": "^2.16.0",
     "nest-router": "^1.0.6",
+    "nestjs-config": "^1.2.0",
     "point-of-view": "^1.1.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
