--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,5 +7,5 @@
   "database": "nest_template",
   "entities": ["src/**/**.entity{.ts,.js}"],
   "synchronize": true,
-  "logging": true
+  "logging": false
 }
